@@ -3,6 +3,7 @@ This this the changelog file for the Pothos C++ library.
 Release 0.4.1 (pending)
 ==========================
 
+- Dynamic root environment variable for snappy packages
 - Fixed output port reserve handling for empty managers
 - Fix warnings for doxygen generated documentation
 - Set _DEBUG define when not building under MSVC Debug
